--- a/ChatLinksModule/Properties/launchSettings.json
+++ b/ChatLinksModule/Properties/launchSettings.json
@@ -3,12 +3,12 @@
         "Blish HUD 1.2.0": {
             "commandName": "Executable",
             "executablePath": "$(SolutionDir)Blish.HUD/1.2.0/Blish HUD.exe",
-            "commandLineArgs": "--debug --module $(TargetDir)MyBlishHUDModule.bhm"
+            "commandLineArgs": "--debug --module $(TargetDir)$(TargetName).bhm"
         },
         "Blish HUD 1.2.0 (powershell)": {
             "commandName": "Executable",
             "executablePath": "$(SolutionDir)Blish.HUD/1.2.0/Blish HUD.exe",
-            "commandLineArgs": "--debug --process WindowsTerminal --module $(TargetDir)MyBlishHUDModule.bhm"
+            "commandLineArgs": "--debug --process WindowsTerminal --module $(TargetDir)$(TargetName).bhm"
         }
     }
 }
