--- a/ChatLinksModule/manifest.json
+++ b/ChatLinksModule/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "MyBlishHUDModule",
+    "name": "ChatLinksModule",
     "version": "1.0.0",
-    "namespace": "org.site-name.module-name",
-    "package": "MyBlishHUDModule.dll",
+    "namespace": "sliekens.chat-links",
+    "package": "ChatLinksModule.dll",
     "manifest_version": 1,
 
     "description": "Description of your module. Visit https://github.com/blish-hud/manifest.json/blob/master/manifest-v1.md for details about the manifest format.",
