--- a/ChatLinksModule/ChatLinksModule.csproj
+++ b/ChatLinksModule/ChatLinksModule.csproj
@@ -8,15 +8,21 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>compile; build</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="GW2SDK" Version="1.4.0" />
-        <PackageReference Include="PolySharp" Version="1.14.1">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PackageReference Include="GW2SDK" Version="2.0.0-preview.0.15" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.32" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="PolySharp" Version="1.15.0">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="SQLitePCLRaw.bundle_winsqlite3" Version="2.1.10" />
         <PackageReference Include="System.ComponentModel.Composition" Version="8.0.0" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+        <PackageReference Include="System.Text.Json" Version="9.0.0" />
     </ItemGroup>
     <ItemGroup>
-      <Folder Include="UI\Tabs\Achievements\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
+
 </Project>
