--- a/ChatLinksModule/ChatLinksModule.csproj
+++ b/ChatLinksModule/ChatLinksModule.csproj
@@ -8,6 +8,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>compile; build</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.3.2" />
         <PackageReference Include="GW2SDK" Version="2.0.0-preview.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.32" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
