Use BulkSaveChanges package

--- a/ChatLinksModule/ChatLinksModule.csproj
+++ b/ChatLinksModule/ChatLinksModule.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="SQLitePCLRaw.bundle_winsqlite3" Version="2.1.10" />
         <PackageReference Include="System.ComponentModel.Composition" Version="8.0.0" />
         <PackageReference Include="System.Text.Json" Version="9.0.0" />
+        <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="3.103.6.3" />
     </ItemGroup>
     
 </Project>
