--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -13,12 +13,14 @@
             <IncludeAssets>compile</IncludeAssets>
         </PackageReference>
 
-        <PackageReference Include="GW2SDK" Version="2.0.0-preview.0.29" />
+        <PackageReference Include="GW2SDK" Version="2.0.0" />
 
         <PackageReference Include="PolySharp" Version="1.15.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+
+        <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
