--- a/src/ChatLinks.EF/ChatLinks.EF.csproj
+++ b/src/ChatLinks.EF/ChatLinks.EF.csproj
@@ -10,12 +10,13 @@
         <PackageReference Include="BlishHUD" Version="1.2.0">
             <ExcludeAssets>build</ExcludeAssets>
         </PackageReference>
-        <PackageReference Include="gw2sdk" Version="2.0.0-preview.0.29" />
+        <PackageReference Include="gw2sdk" Version="2.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.32">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
