--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -13,7 +13,7 @@
             <IncludeAssets>compile; build</IncludeAssets>
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.3.2" />
-        <PackageReference Include="GW2SDK" Version="2.0.0-preview.0.29" />
+        <PackageReference Include="GW2SDK" Version="2.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.32" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.32" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
@@ -23,17 +23,13 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="SQLitePCLRaw.bundle_winsqlite3" Version="2.1.10" />
-        <PackageReference Include="System.ComponentModel.Composition" Version="8.0.0" />
+        <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
         <PackageReference Include="System.Text.Json" Version="9.0.0" />
         <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="3.103.6.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Common\Common.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Items\" />
     </ItemGroup>
 
 </Project>
