--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -12,6 +12,10 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>compile; build</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Gw2Sharp" Version="1.7.4">
+            <IncludeAssets>none</IncludeAssets>
+            <ExcludeAssets>all</ExcludeAssets>
+        </PackageReference>
         <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.3.2" />
         <PackageReference Include="GW2SDK" Version="2.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.32" />
