--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="Resources\**\*" />
+      <EmbeddedResource Include="Resources\**\*" />
+    </ItemGroup>
 
+    <ItemGroup>
         <PackageReference Include="BlishHUD" Version="1.2.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>compile</IncludeAssets>
