--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -16,7 +16,7 @@
             <IncludeAssets>none</IncludeAssets>
             <ExcludeAssets>all</ExcludeAssets>
         </PackageReference>
-        <PackageReference Include="GW2SDK" Version="2.0.0" />
+        <PackageReference Include="GW2SDK" Version="2.0.1-preview.0.24" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.32" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.32" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
