--- a/src/ChatLinks.EF/ChatLinks.EF.csproj
+++ b/src/ChatLinks.EF/ChatLinks.EF.csproj
@@ -10,7 +10,7 @@
         <PackageReference Include="BlishHUD" Version="1.2.0">
             <ExcludeAssets>build</ExcludeAssets>
         </PackageReference>
-        <PackageReference Include="gw2sdk" Version="2.0.1-preview.0.24" />
+        <PackageReference Include="gw2sdk" Version="2.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.32">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
