Include seeddata in module

--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -38,4 +38,8 @@
       <Folder Include="Concurrency\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="System.IO.Compression" />
+    </ItemGroup>
+
 </Project>
