--- a/nuget.config
+++ b/nuget.config
@@ -5,4 +5,7 @@
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <add key="sliekens" value="https://nuget.pkg.github.com/sliekens/index.json" />
   </packageSources>
+    <disabledPackageSources>
+        <add key="sliekens" value="true" />
+    </disabledPackageSources>
 </configuration>
