--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -38,7 +38,7 @@
         <Reference Include="System.IO.Compression" />
     </ItemGroup>
 
-    <Target Name="EnsureRestore" BeforeTargets="Build">
+    <Target Name="EnsureRestore" BeforeTargets="ResolvePackageAssets">
         <MSBuild Projects="$(MSBuildThisFileDirectory)$(MSBuildThisFileName).csproj" Targets="Restore" />
     </Target>
 </Project>
