--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -24,6 +24,8 @@
 
         <PackageReference Include="GW2SDK" Version="2.1.0" />
 
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.32" />
+
         <PackageReference Include="PolySharp" Version="1.15.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
