Include BuildBlishHUDModule in BuildDependsOn

--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -7,6 +7,13 @@
         <BlishHUDModuleFileName>sliekens.chat-links</BlishHUDModuleFileName>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <BuildDependsOn>
+            $(BuildDependsOn);
+            BuildBlishHUDModule;
+        </BuildDependsOn>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="BlishHUD" Version="1.2.0">
             <PrivateAssets>all</PrivateAssets>
@@ -37,4 +44,6 @@
     <ItemGroup>
         <Reference Include="System.IO.Compression" />
     </ItemGroup>
+    
+    
 </Project>
