--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -37,4 +37,8 @@
     <ItemGroup>
         <Reference Include="System.IO.Compression" />
     </ItemGroup>
+
+    <Target Name="EnsureRestore" BeforeTargets="ResolvePackageAssets">
+        <MSBuild Projects="$(MSBuildProjectFile)" Targets="Restore" />
+    </Target>
 </Project>
