Same player shoots again

--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -40,7 +40,8 @@
 
     <ItemGroup>
         <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.10" />
-        <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.10" GeneratePathProperty="true" />
+        <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.10"
+            GeneratePathProperty="true" />
     </ItemGroup>
 
     <ItemGroup>
@@ -51,18 +52,25 @@
         <Reference Include="System.IO.Compression" />
     </ItemGroup>
 
+    <Target Name="EnsureRestore" BeforeTargets="ResolvePackageAssets">
+        <MSBuild Projects="$(MSBuildProjectFile)" Targets="Restore" />
+    </Target>
+
     <Target Name="EmbedNativeSQLiteDllWithCostura" BeforeTargets="ResolveAssemblyReferences">
         <ItemGroup>
-            <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x86\native\e_sqlite3.dll">
+            <EmbeddedResource
+                Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x86\native\e_sqlite3.dll">
                 <Link>costura-win-x86\sliekens.e_sqlite3.dll</Link>
                 <Visible>false</Visible>
             </EmbeddedResource>
-            <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x64\native\e_sqlite3.dll">
+            <EmbeddedResource
+                Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x64\native\e_sqlite3.dll">
                 <Link>costura-win-x64\sliekens.e_sqlite3.dll</Link>
                 <Visible>false</Visible>
             </EmbeddedResource>
             <Content Remove="@(Content)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll'" />
-            <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll' OR '%(Filename)%(Extension)' == 'SQLitePCLRaw.batteries_v2.dll'" />
+            <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)"
+                Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll' OR '%(Filename)%(Extension)' == 'SQLitePCLRaw.batteries_v2.dll'" />
         </ItemGroup>
     </Target>
 
