Use version of Microsoft.Data.Sqlite without bundle initializer

--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -45,6 +45,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Content Include="..\..\forked\Microsoft.Data.Sqlite.dll">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
