--- a/.gitignore
+++ b/.gitignore
@@ -363,4 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # Blish HUD runtime data
-/Blish.HUD/1.2.0/Settings/
+/Blish.HUD/1.2.0/Settings/*
+!/Blish.HUD/1.2.0/Settings/modules/
