--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -40,8 +40,7 @@
 
     <ItemGroup>
         <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.10" />
-        <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.10"
-            GeneratePathProperty="true" />
+        <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.10" GeneratePathProperty="true" />
     </ItemGroup>
 
     <ItemGroup>
@@ -64,19 +63,16 @@
 
     <Target Name="EmbedNativeSQLiteDllWithCostura" BeforeTargets="ResolveAssemblyReferences">
         <ItemGroup>
-            <EmbeddedResource
-                Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x86\native\e_sqlite3.dll">
+            <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x86\native\e_sqlite3.dll">
                 <Link>costura-win-x86\sliekens.e_sqlite3.dll</Link>
                 <Visible>false</Visible>
             </EmbeddedResource>
-            <EmbeddedResource
-                Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x64\native\e_sqlite3.dll">
+            <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x64\native\e_sqlite3.dll">
                 <Link>costura-win-x64\sliekens.e_sqlite3.dll</Link>
                 <Visible>false</Visible>
             </EmbeddedResource>
             <Content Remove="@(Content)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll'" />
-            <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)"
-                Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll' OR '%(Filename)%(Extension)' == 'SQLitePCLRaw.batteries_v2.dll'" />
+            <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll' OR '%(Filename)%(Extension)' == 'SQLitePCLRaw.batteries_v2.dll'" />
         </ItemGroup>
     </Target>
 
