--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -36,6 +36,7 @@
 
     <ItemGroup>
       <Reference Include="Microsoft.CSharp" />
+      <Reference Include="PresentationCore" />
     </ItemGroup>
 
 </Project>
