--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -26,6 +26,8 @@
 
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.32" />
 
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.32" />
+
         <PackageReference Include="PolySharp" Version="1.15.0">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
