--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -50,6 +50,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Adapters\Adapters.csproj" />
         <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
