Add equipment skin unlock status

--- a/src/ChatLinks/manifest.json
+++ b/src/ChatLinks/manifest.json
@@ -20,9 +20,9 @@
         "chat-links-data"
     ],
     "api_permissions": {
-        "account": {
+        "unlocks": {
             "optional": true,
-            "details": "Used to enrich tooltips with account information."
+            "details": "Used to enrich tooltips with account unlocks."
         }
     }
 }
