--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="GW2SDK" Version="2.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.32" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.32" />
+        <PackageReference Include="Microsoft.Extensions.Localization" Version="3.1.32" />
         <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
