--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -22,7 +22,7 @@
             <ExcludeAssets>all</ExcludeAssets>
         </PackageReference>
 
-        <PackageReference Include="GW2SDK" Version="2.1.0" />
+        <PackageReference Include="GW2SDK" Version="2.2.0" />
 
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.32" />
 
@@ -34,6 +34,8 @@
         </PackageReference>
 
         <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
+
+        <PackageReference Include="System.Text.Json" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
