Fix sqlite driver in ef helper app

--- a/src/ChatLinks.EF/ChatLinks.EF.csproj
+++ b/src/ChatLinks.EF/ChatLinks.EF.csproj
@@ -16,6 +16,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+        <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.10" />
         <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
     </ItemGroup>
 
