--- a/src/ChatLinks/ChatLinks.csproj
+++ b/src/ChatLinks/ChatLinks.csproj
@@ -1,90 +1,82 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="..\..\Common.props" />
-
-    <PropertyGroup>
-        <TargetFramework>net472</TargetFramework>
-        <OutputType>Library</OutputType>
-        <BlishHUDModuleFileName>sliekens.chat-links</BlishHUDModuleFileName>
-    </PropertyGroup>
-
+  <Import Project="..\..\Common.props" />
+  <PropertyGroup>
+    <TargetFramework>net472</TargetFramework>
+    <OutputType>Library</OutputType>
+    <BlishHUDModuleFileName>sliekens.chat-links</BlishHUDModuleFileName>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="BlishHUD">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile; build</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Costura.Fody">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Fody">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Gw2Sharp">
+      <IncludeAssets>none</IncludeAssets>
+      <ExcludeAssets>all</ExcludeAssets>
+    </PackageReference>
+    <PackageReference Include="GW2SDK" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" />
+    <PackageReference Include="Microsoft.Extensions.Http" />
+    <PackageReference Include="Microsoft.Extensions.Localization" />
+    <PackageReference Include="Microsoft.Windows.CsWin32">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="Polly" />
+    <PackageReference Include="PolySharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.ComponentModel.Composition" />
+    <PackageReference Include="System.Text.Json" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" />
+    <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" GeneratePathProperty="true" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\forked\Microsoft.Data.Sqlite.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Adapters\Adapters.csproj" />
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.IO.Compression" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\UI\MainWindow.resx">
+      <Generator>
+      </Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\UI\Tabs\Items\Tooltips\ItemTooltipViewModel.resx">
+      <Generator>
+      </Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <Target Name="EnsureRestore" BeforeTargets="ResolvePackageAssets">
+    <MSBuild Projects="$(MSBuildProjectFile)" Targets="Restore" />
+  </Target>
+  <Target Name="EmbedNativeSQLiteDllWithCostura" BeforeTargets="ResolveAssemblyReferences">
     <ItemGroup>
-        <PackageReference Include="BlishHUD" Version="1.2.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile; build</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Costura.Fody" Version="6.0.0">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="Fody" Version="6.9.1">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="Gw2Sharp" Version="1.7.4">
-            <IncludeAssets>none</IncludeAssets>
-            <ExcludeAssets>all</ExcludeAssets>
-        </PackageReference>
-        <PackageReference Include="GW2SDK" Version="2.2.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="3.1.32" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.32" />
-        <PackageReference Include="Microsoft.Extensions.Localization" Version="3.1.32" />
-        <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.106">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-        <PackageReference Include="Polly" Version="8.5.0" />
-        <PackageReference Include="PolySharp" Version="1.15.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
-        <PackageReference Include="System.Text.Json" Version="9.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.10" />
-        <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.10" GeneratePathProperty="true" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Content Include="..\..\forked\Microsoft.Data.Sqlite.dll">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Adapters\Adapters.csproj" />
-        <ProjectReference Include="..\Common\Common.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="System.IO.Compression" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Update="Resources\UI\MainWindow.resx">
-        <Generator></Generator>
+      <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x86\native\e_sqlite3.dll">
+        <Link>costura-win-x86\sliekens.e_sqlite3.dll</Link>
+        <Visible>false</Visible>
       </EmbeddedResource>
-      <EmbeddedResource Update="Resources\UI\Tabs\Items\Tooltips\ItemTooltipViewModel.resx">
-        <Generator></Generator>
+      <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x64\native\e_sqlite3.dll">
+        <Link>costura-win-x64\sliekens.e_sqlite3.dll</Link>
+        <Visible>false</Visible>
       </EmbeddedResource>
+      <Content Remove="@(Content)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll'" />
+      <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll' OR '%(Filename)%(Extension)' == 'SQLitePCLRaw.batteries_v2.dll'" />
     </ItemGroup>
-
-    <Target Name="EnsureRestore" BeforeTargets="ResolvePackageAssets">
-        <MSBuild Projects="$(MSBuildProjectFile)" Targets="Restore" />
-    </Target>
-
-    <Target Name="EmbedNativeSQLiteDllWithCostura" BeforeTargets="ResolveAssemblyReferences">
-        <ItemGroup>
-            <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x86\native\e_sqlite3.dll">
-                <Link>costura-win-x86\sliekens.e_sqlite3.dll</Link>
-                <Visible>false</Visible>
-            </EmbeddedResource>
-            <EmbeddedResource Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\win-x64\native\e_sqlite3.dll">
-                <Link>costura-win-x64\sliekens.e_sqlite3.dll</Link>
-                <Visible>false</Visible>
-            </EmbeddedResource>
-            <Content Remove="@(Content)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll'" />
-            <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" Condition="'%(Filename)%(Extension)' == 'e_sqlite3.dll' OR '%(Filename)%(Extension)' == 'SQLitePCLRaw.batteries_v2.dll'" />
-        </ItemGroup>
-    </Target>
-
+  </Target>
 </Project>
