--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -1,46 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="..\..\Common.props" />
-
-    <PropertyGroup>
-        <OutputType>Library</OutputType>
-        <TargetFramework>net472</TargetFramework>
-    </PropertyGroup>
-
-    <ItemGroup>
-      <None Remove="Resources\**\*" />
-      <EmbeddedResource Include="Resources\**\*" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="BlishHUD" Version="1.2.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>compile</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="Gw2Sharp" Version="1.7.4">
-            <IncludeAssets>none</IncludeAssets>
-            <ExcludeAssets>all</ExcludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="GW2SDK" Version="2.2.0" />
-
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.32" />
-
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.32" />
-
-        <PackageReference Include="PolySharp" Version="1.15.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-
-        <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0" />
-
-        <PackageReference Include="System.Text.Json" Version="9.0.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.CSharp" />
-      <Reference Include="PresentationCore" />
-    </ItemGroup>
-
+  <Import Project="..\..\Common.props" />
+  <PropertyGroup>
+    <OutputType>Library</OutputType>
+    <TargetFramework>net472</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Resources\**\*" />
+    <EmbeddedResource Include="Resources\**\*" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="BlishHUD">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Gw2Sharp">
+      <IncludeAssets>none</IncludeAssets>
+      <ExcludeAssets>all</ExcludeAssets>
+    </PackageReference>
+    <PackageReference Include="GW2SDK" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="PolySharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.ComponentModel.Composition" />
+    <PackageReference Include="System.Text.Json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PresentationCore" />
+  </ItemGroup>
 </Project>
