--- a/src/ChatLinks/manifest.json
+++ b/src/ChatLinks/manifest.json
@@ -20,13 +20,17 @@
         "chat-links-data"
     ],
     "api_permissions": {
+        "account": {
+            "optional": true,
+            "details": "Basic account access. When disabled, the other permissions are also disabled."
+        },
         "unlocks": {
             "optional": true,
             "details": "Used to enrich tooltips with account unlocks."
         },
         "inventories": {
             "optional": true,
-            "details":  "Used to enrich tooltips with inventory data."
+            "details": "Used to enrich tooltips with inventory data."
         }
     }
 }
