--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,4 +5,48 @@
         <Nullable>enable</Nullable>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
+
+    <PropertyGroup>
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/configuration-options#enable-code-analysis -->
+        <EnableNETAnalyzers>true</EnableNETAnalyzers>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/core/project-sdk/msbuild-props#analysislevel -->
+        <AnalysisLevel>latest</AnalysisLevel>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/design-warnings -->
+        <AnalysisModeDesign>Default</AnalysisModeDesign>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/documentation-warnings -->
+        <AnalysisModeDocumentation>Default</AnalysisModeDocumentation>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/globalization-warnings -->
+        <AnalysisModeGlobalization>Default</AnalysisModeGlobalization>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/interoperability-warnings -->
+        <AnalysisModeInteroperability>Default</AnalysisModeInteroperability>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/maintainability-warnings -->
+        <AnalysisModeMaintainability>Default</AnalysisModeMaintainability>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/naming-warnings -->
+        <AnalysisModeNaming>Default</AnalysisModeNaming>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/performance-warnings -->
+        <AnalysisModePerformance>Default</AnalysisModePerformance>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/core/deploying/single-file/warnings/overview -->
+        <AnalysisModeSingleFile>Default</AnalysisModeSingleFile>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/reliability-warnings -->
+        <AnalysisModeReliability>Default</AnalysisModeReliability>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/security-warnings -->
+        <AnalysisModeSecurity>Default</AnalysisModeSecurity>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/style-rules/ -->
+        <AnalysisModeStyle>Default</AnalysisModeStyle>
+
+        <!-- https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/quality-rules/usage-warnings -->
+        <AnalysisModeUsage>Default</AnalysisModeUsage>
+    </PropertyGroup>
 </Project>
